@@ -1,7 +1,7 @@
 /*
  *  ============LICENSE_START=======================================================
  *  Copyright (C) 2022 Bell Canada
- *  Modifications Copyright (C) 2022 Nordix Foundation
+ *  Modifications Copyright (C) 2022-2023 Nordix Foundation
  *  ================================================================================
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -24,13 +24,12 @@ package org.onap.cps.ncmp.api.models;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import lombok.Builder;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.onap.cps.ncmp.api.NcmpEventResponseCode;
+import org.onap.cps.ncmp.api.impl.utils.YangDataConverter;
 
 @Data
 @Builder
@@ -41,8 +40,6 @@ public class CmHandleRegistrationResponse {
     private final Status status;
     private RegistrationError registrationError;
     private String errorText;
-
-    private static final Pattern cmHandleIdInXpathPattern = Pattern.compile("\\[@id='(.*?)']");
 
     /**
      * Creates a failure response based on exception.
@@ -84,15 +81,15 @@ public class CmHandleRegistrationResponse {
      * @return CmHandleRegistrationResponse
      */
     public static List<CmHandleRegistrationResponse> createFailureResponses(final Collection<String> failedXpaths,
-            final RegistrationError registrationError) {
+                                                                            final RegistrationError registrationError) {
         final List<CmHandleRegistrationResponse> cmHandleRegistrationResponses = new ArrayList<>(failedXpaths.size());
         for (final String xpath : failedXpaths) {
-            final Matcher matcher = cmHandleIdInXpathPattern.matcher(xpath);
-            if (matcher.find()) {
-                cmHandleRegistrationResponses.add(
-                    CmHandleRegistrationResponse.createFailureResponse(matcher.group(1), registrationError));
-            } else {
+            final String cmHandleId = YangDataConverter.extractCmHandleIdFromXpath(xpath);
+            if (cmHandleId.isEmpty()) {
                 log.warn("Unexpected xpath {}", xpath);
+            } else {
+                cmHandleRegistrationResponses.add(
+                        CmHandleRegistrationResponse.createFailureResponse(cmHandleId, registrationError));
             }
         }
         return cmHandleRegistrationResponses;
@@ -108,8 +105,7 @@ public class CmHandleRegistrationResponse {
     public static List<CmHandleRegistrationResponse> createFailureResponses(final Collection<String> cmHandleIds,
             final Exception exception) {
         return cmHandleIds.stream()
-                .map(cmHandleId -> CmHandleRegistrationResponse.createFailureResponse(cmHandleId, exception))
-                .collect(Collectors.toList());
+                .map(cmHandleId -> CmHandleRegistrationResponse.createFailureResponse(cmHandleId, exception)).toList();
     }
 
     public static CmHandleRegistrationResponse createSuccessResponse(final String cmHandle) {
@@ -118,8 +114,7 @@ public class CmHandleRegistrationResponse {
     }
 
     public static List<CmHandleRegistrationResponse> createSuccessResponses(final List<String> cmHandleIds) {
-        return cmHandleIds.stream().map(CmHandleRegistrationResponse::createSuccessResponse)
-                .collect(Collectors.toList());
+        return cmHandleIds.stream().map(CmHandleRegistrationResponse::createSuccessResponse).toList();
     }
 
     public enum Status {
@@ -131,7 +126,9 @@ public class CmHandleRegistrationResponse {
         UNKNOWN_ERROR("00", "Unknown error"),
         CM_HANDLE_ALREADY_EXIST("01", "cm-handle already exists"),
         CM_HANDLE_DOES_NOT_EXIST("02", "cm-handle does not exist"),
-        CM_HANDLE_INVALID_ID("03", "cm-handle has an invalid character(s) in id");
+        CM_HANDLE_INVALID_ID("03", "cm-handle has an invalid character(s) in id"),
+        CM_HANDLES_NOT_READY(NcmpEventResponseCode.CM_HANDLES_NOT_READY.getStatusCode(),
+                NcmpEventResponseCode.CM_HANDLES_NOT_READY.getStatusMessage());
 
         public final String errorCode;
         public final String errorText;
